Fixed bug with about me page in mobile view being too large

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -8,6 +8,7 @@ body {
   margin-top: 100px;
   padding: 4rem 0;
   height: 100%;
+  width: 100%;
 }
 
 .about-me-container {
@@ -127,11 +128,21 @@ body {
     flex-direction: column;
   }
 
+  .about-me-container {
+    max-width: 412px;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
 }
 
 @media screen and (min-width: 768px) {
   .about-me-content {
     align-items: flex-start;
     flex-direction: row;
+  }
+
+  .about-me-container {
+    max-width: none;
   }
 }
